--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/MohantaAbhigyan">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://abhigyan-mohanta.github.io/cv/">Website</a>
     <p class="copyright">© Abhigyan Mohanta.</p>
   </div>
 
