add additional interests

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2>Hello.</h2>
       <p class="intro">I am a beginner in coding,
       Currently learning DSA in Java, Python, Android Development and Web Development!
-    I am also interested in Machine Learning, AI and DevOps!</p>
+    I am also interested in Web 3, Machine Learning, AI, DevOps and Cyber Security!</p>
     </div>
     <hr>
     <div class="skills">
